various changes were done

--- a/index.html
+++ b/index.html
@@ -3,42 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="Sample.css" />
-    <title>晴耕雨読</title>
+    <link rel="stylesheet" href="index.css" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <title>Document</title>
   </head>
   <body>
-    <h1>No Fun No Gain</h1>
-    <h2>Goal</h2>
-    <div class="image"><img src="pic1.jpg" alt="pic1.jpg" /></div>
-    <p>弊社はお客様のニーズにお答えし、お客様と共に歩んでまいります。</p>
-
-    <h2>Service</h2>
-    <div class="image"><img src="pic2.jpg" alt="" /></div>
-    <p>お取り扱いサービスについてご紹介いたす。</p>
-
-    <h2>Company</h2>
-    <div class="image"><img src="pic3.jpg" alt="pic3.jpg" /></div>
-    <p>
-      弊社は980年の設立以来、地域の皆様の一員として営業を続けております。
-    </p>
-
-    <table>
-      <tr>
-        <th>出発地</th>
-        <th>到着地</th>
-      </tr>
-      <tr>
-        <td>東京</td>
-        <td>大阪</td>
-      </tr>
-      <tr>
-        <td>名古屋</td>
-        <td>岡山</td>
-      </tr>
-      <tr>
-        <td>札幌</td>
-        <td>那覇</td>
-      </tr>
-    </table>
+    <div id="title">No Fun No Gain</div>
+    <div id="enter"><a href="index2.html">Enter</a></div>
   </body>
 </html>
